--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="recentWords">최근검색어</string>
+    <string name="turnOn_GPS">"단말기의 GPS를 켜주세요."</string>
+    <string name="location_permission_deniedMessage">지도에서 내 위치를 확인하여 서비스를 이용하기 위해 권한이 필요합니다. (필수권한)</string>
 </resources>
