--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -10,12 +10,17 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="searchResult">검색결과</string>
-    <string name="recommendOrder">추천순</string>
-    <string name="searchHint">지역 / 매장명 / 메뉴 검색</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="recentWords">최근검색어</string>
+    <string name="recommend_order">추천순</string>
+    <string name="search_hint">지역 / 매장명 / 메뉴 검색</string>
+    <string name="recent_words">최근검색어</string>
     <string name="turnOn_GPS">"단말기의 GPS를 켜주세요."</string>
     <string name="location_permission_deniedMessage">지도에서 내 위치를 확인하여 서비스를 이용하기 위해 권한이 필요합니다. (필수권한)</string>
     <string name="login_text">가입을 진행할 경우 , 아래의 정책에 동의한 것으로 간주됩니다. \n서비스 이용약관 및 개인정보처리방침</string>
+    <string name="phone_number">전화번호</string>
+    <string name="location">지역</string>
+    <string name="price">가격대</string>
+    <string name="address">상세주소</string>
+    <string name="menu">메뉴</string>
+    <string name="article">아티클</string>
+    <string name="notice_add">*추가할 내용이 있다면 <u>여기</u>를 눌러주세요.</string>
 </resources>
