--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="article">아티클</string>
     <string name="notice_add">*추가할 내용이 있다면 <u>여기</u>를 눌러주세요.</string>
     <string name="my_page">마이페이지</string>
+    <string name="my_profile">내 프로필</string>
+    <string name="school_certification">학교 인증하기</string>
 </resources>
