--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="address">상세주소</string>
     <string name="menu">메뉴</string>
     <string name="article">아티클</string>
+    <string name="article_post">아티클 작성</string>
     <string name="notice_add">*추가할 내용이 있다면 <u>여기</u>를 눌러주세요.</string>
     <string name="home">홈</string>
     <string name="bookMark">북마크</string>
@@ -36,4 +37,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="articleExplain">대학생 에디터들이 작성한\n찐 맛집 아티클을 확인해보세요!</string>
     <string name="test_content">Lorem ipsum dolor sit amet consectetur. Phasellus vel ultricies sed leo. Gravida vestibulum volutpat enim fringilla id enim vitae. Fermentum adipiscing quis facilisis morbi tristique. Neque viverra in non pretium diam netus. Lorem ipsum dolor sit amet consectetur. Phasellus vel ultricies sed leo. Gravida vestibulum volutpat enim fringilla id enim vitae. Fermentum adipiscing quis facilisis morbi tristique. Neque viverra in non pretium diam netus.</string>
+    <string name="add_image_text">이미지 가져오기</string>
+    <string name="title">제목</string>
+    <string name="add_address_text">위치추가</string>
+    <string name="add_address_explain">*식당이 나오지 않을 경우 , 직접 등록이 가능해요!</string>
+    <string name="add_content_hint">가게에서의 경험을 작성해주세요.\n (10자 이상 ~ 10000자 이하)</string>
+    <string name="hashTag">해시태그</string>
 </resources>
