--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -48,4 +48,8 @@
     <string name="school_certification">학교 인증하기</string>
     <string name="my_write_article">내가 쓴 아티클</string>
     <string name="empty_article">우리 학교 맛집을\n 소개해주세요!</string>
+    <string name="home_explain">한 눈에 알아보는\n학교 맛집 지도</string>
+    <string name="home_what_kindof_qes">어떤 맛집이 필요하세요?</string>
+    <string name="what_about_qes">여긴 어때 ~ ?</string>
+    <string name="home_text">유니잇 선정한 이번주 맛집</string>
 </resources>
