--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="previous">Previous</string>
     <string name="hide_bottom">hideBottom</string>
 
+    <string name="exit_txt">\'뒤로\' 버튼을 한번 더 누르면 종료 됩니다.</string>
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="searchResult">검색결과</string>
