--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -72,4 +72,8 @@
     <string name="change_password">비밀번호 변경</string>
     <string name="logout">로그아웃</string>
     <string name="withdraw">탈퇴</string>
+    <string name="change_image">사진 변경하기</string>
+    <string name="nick">닉네임</string>
+    <string name="nick_form_hint">한글 5자리 또는 영어 10글자 이하</string>
+    <string name="introduce_hint">50자 내로 자기소개를 작성해주세요</string>
 </resources>
