--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -43,6 +43,11 @@
     <string name="event_notice">이벤트 유의사항</string>
     <string name="use_coupon">쿠폰 사용하기</string>
 
+    <string name="report">신고</string>
+    <string name="report_hint">내용을 입력하세요</string>
+    <string name="cancel">취소</string>
+    <string name="confirm">확인</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="articleExplain">대학생 에디터들이 작성한\n찐 맛집 아티클을 확인해보세요!</string>
     <string name="test_content">Lorem ipsum dolor sit amet consectetur. Phasellus vel ultricies sed leo. Gravida vestibulum volutpat enim fringilla id enim vitae. Fermentum adipiscing quis facilisis morbi tristique. Neque viverra in non pretium diam netus. Lorem ipsum dolor sit amet consectetur. Phasellus vel ultricies sed leo. Gravida vestibulum volutpat enim fringilla id enim vitae. Fermentum adipiscing quis facilisis morbi tristique. Neque viverra in non pretium diam netus.</string>
