add email done page

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -82,4 +82,8 @@
     <string name="char_limit_5">5글자 이내로 작성해주세요.</string>
     <string name="included_sp">특수문자가 포함되어 있습니다.</string>
     <string name="duplicated_nick">이미 존재하는 닉네임입니다.</string>
+    <string name="done_email">학교 인증 완료!</string>
+    <string name="c_text">가입을 축하합니다!</string>
+    <string name="c_text2">님, 가입을 축하합니다!</string>
+
 </resources>
