--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -45,8 +45,11 @@
 
     <string name="report">신고</string>
     <string name="report_hint">내용을 입력하세요</string>
+    <string name="report_toast">내용을 입력해주세요</string>
     <string name="cancel">취소</string>
     <string name="confirm">확인</string>
+    <string name="report_complete">신고가\n 완료되었습니다</string>
+    <string name="report_cancel_qes">작성을 취소하시겠습니까?</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="articleExplain">대학생 에디터들이 작성한\n찐 맛집 아티클을 확인해보세요!</string>
