--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="recommend">추천</string>
     <string name="event_notice">이벤트 유의사항</string>
     <string name="use_coupon">쿠폰 사용하기</string>
+    <string name="end_event">이벤트 종료</string>
 
     <string name="report">신고</string>
     <string name="report_hint">내용을 입력하세요</string>
